--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="top">
+    <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-<<<<<<< HEAD
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
@@ -35,7 +35,9 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>CSS follows a pattern of an initial selector, followed by your declaration block of declarations that is made up of a property and a value.</li>
         </ul>
       </section>
    
@@ -46,6 +48,8 @@
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>"cd" -Current Directory</li>
           <li>"ls" -List</li>
+          <li>Git status displays the state of the working directory</li>
+          <li>Git push sends commits and asks them to update and git pullis used to sync remote content</li>
         </ul>
       </section>
    
@@ -55,9 +59,6 @@
           <li>Enter your JavaScript notes here</li>
         </ul>
       </section>
-=======
-      <!-- Student code goes here -->
->>>>>>> fbd8b4d30f01e6db21b9362dda82543f99ef7763
     </main>
 
     <footer>
