--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
           <li>End lines of JavaScript with a semicolon</li>
           <li>All strings are surrounded with quotations marks</li>
           <li>We define topics AFTER we tell the computer to log it into the console.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
